Avoid whitespace between method name and argument list, bump version to 1.0.4

--- a/lib/hanna-nouveau/template_files/sections.haml
+++ b/lib/hanna-nouveau/template_files/sections.haml
@@ -70,7 +70,7 @@
                         - method.call_seq.split(/\r?\n/).each do |seq|
                           %div=seq
                     - else
-                      %span.name= method.name
+                      %span.name>= method.name
                       %span.arguments= method.params
                   -#- if method[:codeurl]
                     -#%a.method-signature{ :href => method[:codeurl], :onclick => "popupCode(this.href); return false", :target => "Code" }
