--- a/lib/hanna-nouveau/template_files/layout.haml
+++ b/lib/hanna-nouveau/template_files/layout.haml
@@ -31,4 +31,4 @@
         = yield
         #footer-push
       #footer
-        = link_to '<strong>Hanna Nouveau</strong> RDoc template', 'https://github.com/rdoc/hanna-nouveau'
+        = link_to '<strong>Hanna Nouveau</strong> RDoc template', 'https://github.com/jeremyevans/hanna-nouveau'
