Add basic test suite with 100% line/branch coverage
While this does have 100% line/branch coverage, the testing it does is
fairly minimal beyond generating the expected files.  The actual way
to test significant changes, which I've been doing for years, is to
generate rdoc for a large project before and after the change, then
review the differences between the two to make sure they are expected.

Coverage testing was able to find some unnecessary code:

* sanitize_code_blocks no longer has an effect.  The stripping of
  leading spaces must be done by rdoc itself now.
* Remove unnecessary conditionals in render_class_tree.
* link_to/link_to_method are never callsed with a classname, and
  are always called with a url, so change those arguments to
  required.

Handle https links the same as http links, so they target _top.

Switch to FileUtils.mkdir_p in more places, and remove unnecessary
File.directory? guards.

From testing, I found that the ERB support was broken on Ruby 2.1
and below, since it uses Binding#local_variables.  Require Ruby 2.2
as minimum version now, and switch the RDoc::Markup::ToHtml override
to use Module#prepend.

Move author information from the library itself to the README.

--- a/lib/hanna-nouveau/template_files/sections.erb
+++ b/lib/hanna-nouveau/template_files/sections.erb
@@ -57,7 +57,7 @@ values[:sections].sort_by{|s, h| s.title.to_s}.each do |section, h|
 <a name='<%=h attrib.aref %>'><%= attrib.name %></a>
 </td>
 <td class='context-item-value'><%= attrib.rw ? "[#{attrib.rw}]" : '&nbsp;' %></td>
-<td class='context-item-desc'><%= sanitize_code_blocks(attrib.description) %></td>
+<td class='context-item-desc'><%= attrib.description %></td>
 </tr>
 <%   end %></table>
 </div>
@@ -76,7 +76,7 @@ values[:sections].sort_by{|s, h| s.title.to_s}.each do |section, h|
 
 <%       end %></div>
 <%       if method.description %><div class='description'>
-<%= sanitize_code_blocks(method.description) %>
+<%= method.description %>
 </div>
 <%       end
          if method.markup_code
