--- a/lib/hanna-nouveau/template_files/page.erb
+++ b/lib/hanna-nouveau/template_files/page.erb
@@ -42,7 +42,7 @@ Last Update:
 <% end %></div>
 <div id='content'>
 <div id='text'>
-<% if values[:description] %><div id='description'><%= sanitize_code_blocks(frame_link(values[:description])) %></div>
+<% if values[:description] %><div id='description'><%= frame_link(values[:description]) %></div>
 <% end %><%= frame_link(block.call) %>
 </div>
 </div>
