Make font size legible on mobile devices

--- a/lib/hanna-nouveau/template_files/layout.erb
+++ b/lib/hanna-nouveau/template_files/layout.erb
@@ -2,6 +2,7 @@
 <html lang='en'>
 <head>
 <title><%= h(values[:title]) if values[:title] %></title>
+<meta name='viewport' content='width=device-width, initial-scale=1'>
 <meta content='text/html; charset=<%=h @options.charset %>' http-equiv='Content-Type'>
 <link href='<%=h values[:stylesheet] %>' media='screen' rel='stylesheet' type='text/css'>
 <% if index %><base target='docwin'>
