--- a/lib/hanna-nouveau/template_files/styles.css
+++ b/lib/hanna-nouveau/template_files/styles.css
@@ -164,7 +164,7 @@ table {
 
 div.header {
   font-size: 80%;
-  padding: 0.5em 2%;
+  padding: 0.5em 1rem;
   font-family: Arial, Helvetica, sans-serif;
   border-bottom: 1px solid silver; }
   div.header .name {
@@ -187,7 +187,7 @@ div.header {
       color: #484848; }
 
 #content {
-  padding: 12px 2%; }
+  padding: 12px 1rem; }
   div.class #content {
     position: relative;
     width: 72%; }
